--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,27 @@ a {
 .pad_footer{
     padding-left: 10vw;
 }
+.LandingCoursesCC{
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)), url("./resources/images/ComputerCourse2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
+.LandingCoursesAccounting{
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/ComputerCourse1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
+.LandingCoursesFashionDesign{
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/FashionDesinging.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
 #footer{
     background-image: url("./resources/images/Footer.jpg");
     background-repeat: no-repeat;
@@ -58,5 +79,36 @@ a {
 @media screen and (max-width: 768px){
     .hide-md{
         display: none;
+    }
+}
+@media screen and (max-width: 500px){
+    .logo {
+        width: 100vw;
+        margin: 1vh;
+    }
+    .footer-logo{
+        width: 100vw;
+        margin-top: 15vh;
+    }
+    .LandingCoursesCC{
+        background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)), url("./resources/images/ComputerCourse2.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
+    }
+    .LandingCoursesAccounting{
+        background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/ComputerCourse1.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
+    }
+    .LandingCoursesFashionDesign{
+        background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/FashionDesinging.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
     }
 }
