--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 a {
     color: gray;
 }
+.grad{
+    background-image: linear-gradient(to top, rgba(0,0,0,0.90),rgba(0,0,0,0.90));
+}
 .logo {
     height: 8vh;
     margin: 1vh;
@@ -66,6 +69,72 @@ a {
     background-size: cover;
     height: 45vh;
 }
+.LandingCoursesSpokenEnglish{
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/SpokenEnglih&personalityDevelopment.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
+.LandingCoursesECCE {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85)), url("./resources/images/Classroon.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
+.LandingCoursesBeautyCulture {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.85)), url("./resources/images/BeautyCulture.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45vh;
+}
+.text-green{
+    color: rgb(137, 184, 9);
+}
+.text-blue{
+    color: rgb(11, 153, 214);
+}
+.text-orange{
+    color: rgb(214, 144, 13);
+}
+.text-red{
+    color: rgb(214, 63, 13);
+}
+.text-cyan{
+    color: rgb(13, 214, 191);
+}
+.text-purple{
+    color: rgb(179, 0, 170);
+}
+.desc_courses{
+    font-size: 3vh;
+}
+.sep{
+    height: 2vh;
+}
+.bg-green{
+    background-color: rgb(137, 184, 9);
+}
+.bg-blue{
+    background-color: rgb(11, 153, 214);
+}
+.bg-orange{
+    background-color: rgb(214, 144, 13);
+}
+.bg-red{
+    background-color: rgb(214, 63, 13);
+}
+.bg-cyan{
+    background-color: rgb(13, 214, 191);
+}
+.bg-purple{
+    background-color: rgb(179, 0, 170);
+}
+.my-display-2{
+    font-size: 8vh;
+}
 #footer{
     background-image: url("./resources/images/Footer.jpg");
     background-repeat: no-repeat;
@@ -84,11 +153,13 @@ a {
 @media screen and (max-width: 500px){
     .logo {
         width: 100vw;
-        margin: 1vh;
+        margin: 0px;
+        padding: 0px;
     }
     .footer-logo{
         width: 100vw;
-        margin-top: 15vh;
+        margin: 0px;
+        padding: 0px;
     }
     .LandingCoursesCC{
         background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)), url("./resources/images/ComputerCourse2.jpg");
