--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,20 @@
 a {
     color: gray;
 }
+.my_h{
+    height: 85vh;
+}
 .grad{
     background-image: linear-gradient(to top, rgba(0,0,0,0.90),rgba(0,0,0,0.90));
 }
+.grad-red{
+    background-image: linear-gradient(to top, rgba(194,0,0,0.75),rgba(194,0,0,0.90));
+}
+.grad-blue{
+    background-image: linear-gradient(to top, rgba(31,121,173,0.75),rgba(31,121,173,0.90));
+}
 .logo {
-    height: 8vh;
+    height: 9vh;
     margin: 1vh;
 }
 .aboutus {
@@ -24,7 +33,6 @@ a {
 }
 .footer-logo{
     height: 10vh;
-    margin-top: 15vh;
 }
 .my_pad{
     padding-top: 3vh;
@@ -56,7 +64,7 @@ a {
     height: 45vh;
 }
 .LandingCoursesAccounting{
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)),url("./resources/images/ComputerCourse1.jpg");
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0.2),rgba(0,0,0,0.65)),url("./resources/images/accounting.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -90,50 +98,48 @@ a {
     background-size: cover;
     height: 45vh;
 }
-.text-green{
-    color: rgb(137, 184, 9);
-}
-.text-blue{
-    color: rgb(11, 153, 214);
-}
-.text-orange{
-    color: rgb(214, 144, 13);
-}
-.text-red{
-    color: rgb(214, 63, 13);
-}
 .text-cyan{
-    color: rgb(13, 214, 191);
+    color: rgb(31, 121, 173);
 }
-.text-purple{
-    color: rgb(179, 0, 170);
+.text-dark-red{
+    color: rgb(194, 0, 0);
 }
 .desc_courses{
-    font-size: 3vh;
+    font-size: 2vh;
 }
 .sep{
     height: 2vh;
 }
-.bg-green{
-    background-color: rgb(137, 184, 9);
-}
-.bg-blue{
-    background-color: rgb(11, 153, 214);
-}
-.bg-orange{
-    background-color: rgb(214, 144, 13);
+.bg-cyan{
+    background-color: rgb(31, 121, 173);
 }
 .bg-red{
-    background-color: rgb(214, 63, 13);
+    background-color: rgb(194, 0, 0);
 }
-.bg-cyan{
-    background-color: rgb(13, 214, 191);
+.my-red-header{
+    background-color: rgb(194, 0, 0);
+    height: 1vh;
 }
-.bg-purple{
-    background-color: rgb(179, 0, 170);
+.my-blue-header{
+    background-color: rgb(31, 121, 173);
+    height: 1vh;
 }
 .my-display-2{
     font-size: 8vh;
+}
+.my_heading{
+    padding-top: 25vh;
+}
+.my_heading2{
+    padding-top: 5vh;
+    font-size: 4vh;
+}
+.coursesTitle{
+    font-size: 4vh;
+}
+.content_list{
+    font-size: 2vh;
+    padding: 5px;
 }
 #footer{
     background-image: url("./resources/images/Footer.jpg");
