--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ a {
     font-size: 2.5vh;
 }
 .pad_footer{
-    padding-left: 10vw;
+    padding-left: 3vw;
 }
 .LandingCoursesCC{
     background-image: linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85)), url("./resources/images/ComputerCourse2.jpg");
@@ -147,7 +147,8 @@ a {
     width: 250px;
 }
 .heading-testimonials{
-    font-family: 'Lemonada', cursive;
+    font-family: 'Bitter', serif;
+    font-family: 'Oswald', sans-serif;
     font-size: 10vh;
 }
 .show-lg{
@@ -155,6 +156,11 @@ a {
 }
 .text-contactbar{
     font-size: 2vh;
+}
+.display-none{
+    height: 0px;
+    overflow: hidden;
+    line-height: 0px;
 }
 #footer{
     background-image: url("./resources/images/Footer.jpg");
